Added bad request, not found and internal server error responses to open api
