# universal-database-proxy-rest/src/main/java/com/dercio/database_proxy/common/error/ErrorResponse.java
@@ -36,6 +36,11 @@ public class ErrorResponse {
             return this;
         }
 
+        public Builder timestamp(LocalDateTime timestamp) {
+            errorResponse.setTimestamp(timestamp);
+            return this;
+        }
+
         public Builder code(int code) {
             errorResponse.setCode(code);
             return this;
